header download button fix bg color contrast

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -69,7 +69,7 @@
             .header--nav--ul--download--link {
                 border: none;
                 margin: auto;
-                background: $green;
+                background: #038268;
                 color: $white;
                 padding: .5rem 5rem;
                 border-radius: 50px;
