--- a/src/style/general.css
+++ b/src/style/general.css
@@ -89,7 +89,7 @@ img {
 .header .header--nav .header--nav--ul .header--nav--ul--download--link {
   border: none;
   margin: auto;
-  background: #04ddb2;
+  background: #038268;
   color: #fff;
   padding: 0.5rem 5rem;
   border-radius: 50px;
